passed details from db

--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
-        android:fontFamily="@font/berkshire_swash"
+        android:fontFamily="@font/poppins_light"
         android:text="@string/loginView"
         android:textColor="#FF9017"
         android:textSize="40sp"
@@ -29,6 +29,7 @@
         android:ems="10"
         android:hint="@string/e_mail_address_ET"
         android:importantForAutofill="no"
+        android:fontFamily="@font/poppins_light"
         android:inputType="textEmailAddress"
         android:textAlignment="center"
         android:textColor="@color/maroon"
@@ -49,6 +50,7 @@
         android:ems="10"
         android:hint="@string/password_ET"
         android:importantForAutofill="no"
+        android:fontFamily="@font/poppins_light"
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textColor="@color/maroon"
@@ -67,7 +69,7 @@
         android:layout_marginBottom="236dp"
         android:background="@drawable/bttn_style_welcome"
         android:elevation="4dp"
-        android:fontFamily="@font/berkshire_swash"
+        android:fontFamily="@font/poppins_light"
         android:text="@string/bttn_login"
         android:textAllCaps="false"
         android:textColor="@color/maroon"
