--- a/app/src/main/res/layout/dog_rv_item.xml
+++ b/app/src/main/res/layout/dog_rv_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_dog"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -34,6 +35,15 @@
             android:layout_alignParentBottom="true"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="20dp"/>
+
+        <ImageButton
+            android:id="@+id/bttn_deleteDog"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/bttn_style_delete"
+            android:src="@drawable/ic_delete_dog"
+            android:layout_margin="7dp"/>
 
     </RelativeLayout>
 
