--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/nav_home"
-        android:title="Profile"
+        android:title="@string/profile_menu"
         android:icon="@drawable/dog"/>
 
     <item android:id="@+id/nav_book"
-        android:title="Book"
+        android:title="@string/book_menu"
         android:icon="@drawable/bookicon"/>
 
 </menu>
