--- a/app/src/main/res/drawable/bttn_style_delete.xml
+++ b/app/src/main/res/drawable/bttn_style_delete.xml
@@ -2,7 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient android:startColor="#FF7348" android:endColor="#BF4028" android:angle="90"/>
-    <corners android:radius="1000dp"/>
+    <gradient android:startColor="#FF0800" android:endColor="#FF2900" android:angle="90"/>
+    <corners android:topLeftRadius="10dp"
+        android:bottomLeftRadius="1000dp"
+        android:topRightRadius="0dp"
+        android:bottomRightRadius="10dp"/>
 
 </shape>
