--- a/app/src/main/res/layout/dog_rv_item.xml
+++ b/app/src/main/res/layout/dog_rv_item.xml
@@ -38,12 +38,16 @@
 
         <ImageButton
             android:id="@+id/bttn_deleteDog"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingBottom="5dp"
+            android:paddingRight="4dp"
+            android:paddingTop="4dp"
             android:layout_alignParentRight="true"
+
             android:background="@drawable/bttn_style_delete"
-            android:src="@drawable/ic_delete_dog"
-            android:layout_margin="7dp"/>
+            android:src="@drawable/ic_delete_dog"/>
 
     </RelativeLayout>
 
