--- a/app/src/main/res/layout/dog_rv_item.xml
+++ b/app/src/main/res/layout/dog_rv_item.xml
@@ -13,6 +13,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/profilePic_card_img"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            app:shapeAppearanceOverlay="@style/Circular"
+            app:strokeColor="@color/maroonHint"
+            app:strokeWidth="2dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:padding="4dp"
+            android:background="@drawable/propicbackground"/>
+
+
         <TextView
             android:id="@+id/TVname"
             android:layout_width="match_parent"
@@ -21,19 +34,19 @@
             android:textSize="20sp"
             android:textColor="@color/maroon"
             android:layout_marginLeft="10dp"
-            android:layout_toLeftOf="@id/TVage"/>
+            android:layout_marginTop="17dp"
+            android:layout_toRightOf="@id/profilePic_card_img"/>
 
         <TextView
             android:id="@+id/TVage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="age"
-            android:textSize="20sp"
+            android:textSize="14sp"
             android:textColor="@color/maroon"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="10dp"
+            android:layout_toRightOf="@id/profilePic_card_img"
+            android:layout_below="@id/TVname"
+            android:layout_marginLeft="10dp"
             android:layout_marginBottom="20dp"/>
 
         <ImageButton
