--- a/app/src/main/res/layout/activity_update_dog.xml
+++ b/app/src/main/res/layout/activity_update_dog.xml
@@ -23,7 +23,7 @@
             android:layout_gravity="center_horizontal"/>
 
         <Button
-            android:id="@+id/updateImageBttn"
+            android:id="@+id/uploadImageBttn"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:textColor="@color/maroon"
