--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:id="@+id/nav_health"
+        android:title="@string/health"
+        android:icon="@drawable/ic_health"/>
+
     <item android:id="@+id/nav_home"
         android:title="@string/profile_menu"
         android:icon="@drawable/dog"/>
