--- a/app/src/main/res/values/custom_styles.xml
+++ b/app/src/main/res/values/custom_styles.xml
@@ -3,4 +3,8 @@
     <style name="Circular">
         <item name="cornerSize">50%</item>
     </style>
+
+    <style name="RoundedSquare">
+        <item name="cornerSize">20dp</item>
+    </style>
 </resources>
