solved some errors

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/bttn_style_welcome"
         android:elevation="4dp"
-        android:fontFamily="@font/berkshire_swash"
+        android:fontFamily="@font/poppins_light"
         android:onClick="openLogin"
         android:text="@string/bttn_login"
         android:textAllCaps="false"
@@ -42,7 +42,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/bttn_style_welcome"
         android:elevation="4dp"
-        android:fontFamily="@font/berkshire_swash"
+        android:fontFamily="@font/poppins_light"
         android:onClick="openReg"
         android:text="@string/bttn_register"
         android:textAllCaps="false"
@@ -60,7 +60,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/bttn_style_welcome"
         android:elevation="4dp"
-        android:fontFamily="@font/berkshire_swash"
+        android:fontFamily="@font/poppins_light"
         android:text="@string/bttn_looking_for_a_vet"
         android:textAllCaps="false"
         android:textColor="@color/maroon"
@@ -77,7 +77,7 @@
         android:layout_marginBottom="68dp"
         android:background="@drawable/bttn_style_welcome"
         android:elevation="4dp"
-        android:fontFamily="@font/berkshire_swash"
+        android:fontFamily="@font/poppins_light"
         android:text="@string/bttn_looking_for_a_new_dog"
         android:textAllCaps="false"
         android:textColor="@color/maroon"
