retrive vac details n book details

--- a/app/src/main/res/layout/activity_dogs_details_page_one.xml
+++ b/app/src/main/res/layout/activity_dogs_details_page_one.xml
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/dogsnamebf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semibold"
@@ -83,7 +83,7 @@
         android:textColorHint="@color/gray1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/dogsnamebf" />
 
     <TextView
         android:id="@+id/textView3"
