--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/profilepicbf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/woof_logo"
