--- a/app/src/main/res/layout/fragment_dog_book.xml
+++ b/app/src/main/res/layout/fragment_dog_book.xml
@@ -41,10 +41,12 @@
 
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/shapeableImageView"
+        android:id="@+id/bookPicSIV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/propicbackground"
+        app:shapeAppearanceOverlay="@style/Circular"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/profilepicbf"
         app:layout_constraintStart_toStartOf="@+id/profilepicbf" />
 
