--- a/app/src/main/res/layout/fragment_dog_profile.xml
+++ b/app/src/main/res/layout/fragment_dog_profile.xml
@@ -50,8 +50,7 @@
             app:strokeWidth="2dp"
             app:strokeColor="@color/maroonHint"
             android:padding="4dp"
-            android:background="@drawable/propicbackground"
-            android:src="@drawable/propicbackground" />
+            android:background="@drawable/propicbackground"/>
 
         <TextView
             android:id="@+id/TV_dogName"
