--- a/app/src/main/res/layout/vaccination_holder.xml
+++ b/app/src/main/res/layout/vaccination_holder.xml
@@ -2,17 +2,17 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/purple_200"
+    app:cardBackgroundColor="#FD9919"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="25dp">
+    app:cardCornerRadius="20dp"
+    android:layout_margin="10dp">
 
     <LinearLayout
         android:id="@+id/holder_space"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="5dp"
-        >
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/vaccinationnumber"
@@ -47,6 +47,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center">
+
         <Button
             android:id="@+id/vaccupdatebtn"
             android:layout_width="wrap_content"
@@ -54,15 +55,14 @@
             android:background="@drawable/updatebutton"
             android:text="@string/vaccupdatebtn"
             android:textSize="20sp"
-
-            android:textColor="#581414"/>
+            android:textColor="#581414"
+            android:elevation="10dp"/>
 
         <Button
             android:id="@+id/vaccdeletebtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/updatebutton"
-
             android:text="@string/vaccdeletebtn"
             android:textColor="#581414"
             android:textSize="20sp" />
