--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:id="@+id/CV_vet"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
@@ -14,50 +15,34 @@
         android:background="#FF8637">
 
         <LinearLayout
-            android:layout_width="293dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="30dp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tvName_vet"
+                android:layout_width="316dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginTop="6dp"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="@string/veterinarian_name"
+                android:textAllCaps="true"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/dr"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginEnd="24dp"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:text="Dr."
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tvName_vet"
-                    android:layout_width="233dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginEnd="24dp"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:text="Vet Name"
-                    android:textAllCaps="true"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
 
             <TextView
                 android:id="@+id/tvAddress_vet"
-                android:layout_width="197dp"
-                android:layout_height="44dp"
+                android:layout_width="320dp"
+                android:layout_height="46dp"
                 android:layout_marginTop="1dp"
                 android:layout_marginEnd="86dp"
-                android:text="Address"
+                android:fontFamily="@font/poppins_light"
+                android:text="@string/address_veterinarian"
                 android:textAllCaps="true"
-                android:textSize="20sp" />
+                android:textSize="15sp" />
 
         </LinearLayout>
     </LinearLayout>
